Mimic layout from idea-composer-plugin
See https://github.com/psliwa/idea-composer-plugin